# OTUS-HW-MATRIX

./: .travis.yml  CMakeLists.txt  Element.cpp  Element.h  Matrix.cpp  Matrix.h  Row.cpp  Row.h  main.cpp
include/: Matrix.h
src/: main.cpp
test/: CMakeLists.txt  testMatrix.cpp
testMatrix/: testMatrix.cpp
